--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <h2 style="color: lime;">All Textbooks:</h2>
         <ol style="font-size: x-large; color: lime;">
             <li>
-                <a href="Downloads/Kannad.zip" download="Kannad">Download Kannad Language - All .pdf in one (.zip)</a>
+                <a href="https://github.com/Tsm8542/kannadlang.github.io/releases/download/Downloads/Kannad.zip" download="Kannad">Download Kannad Language - All .pdf in one (.zip)</a>
             </li>
         </ol>
     </div>
